--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <section>
     <div class="home">
         
-        <select class="search">
+        <select class="hsearch">
             <option value="0">Select Home Team</option>
             <option value="1">Atlanta Hawks</option>
             <option value="2">Boston Celtics</option>
@@ -54,12 +54,12 @@
 
         <div class="homeScore">0</div>
     </div>
-    <div class="total">
+    <div class="totals">
         <h1>Score</h1>
-        <div class="total">0</div>
+        <div id="total">0</div>
     </div>
     <div class="away">
-        <select class="search">
+        <select class="asearch">
             <option value="0">Select Away Team</option>
             <option value="1">Atlanta Hawks</option>
             <option value="2">Boston Celtics</option>
