--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
             <option value="30">Washington Wizards</option>
 
         </select>
-        <button class="homeButton">
-            <span class="material-symbols-outlined">Search</span>
-        </button>
 
         <div class="homeScore">0</div>
     </div>
     <div class="totals">
         <h1>Score</h1>
+        <button class="scoreButton" type="button">Get Score</button>
+
         <div id="total">0</div>
     </div>
     <div class="away">
@@ -95,9 +94,7 @@
 
         </select>
 
-        <button class="awayButton">
-            <span class="material-symbols-outlined">Search</span>
-        </button>
+
         <div class="awayScore">0</div>
     </div>
 </section>
