Changed current date code
Had to change the current date code to make things work better

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
      </head>
     <body>
-        <h2>*Please make sure your browser time  and date is correct. Scores update every 10 minutes due to free API*</h2>
+        <h2>*Scores update every 10 minutes due to free API*</h2>
 <section>
 
     <div class="home">
